2010-02-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Bump library revision.

	* configure.in, NEWS:
	=== Version 0.1.14 ===

2010-02-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{ict,proper,common}.txt: Add words.

2010-02-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thcoll/cweight.c (char_weight_tbl_): Replace TIS-620 characters
	in comments with character names.
	* src/thctype/thctype.c (_th_ctype_tbl, _th_chlevel_tbl): Remove
	non-TIS-620 characters from comments. Convert source to UTF-8.

2010-02-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_get_dict): Limit path[] scope.

2010-02-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_get_dict): Print some warning when
	dictionary opening fails.

2010-02-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_get_dict): Do not try to open dictionary
	again if once tried. Multiple failing trials degraded performance.

2010-02-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/*.h, src/*.c, src/*/*.c: Add my e-mail address to
	license header as the contact address.

	* src/thctype/wtt.c,
	* src/thctype/thctype.c,
	* src/thcoll/cweight.h,
	* src/thcoll/cweight.c,
	* src/thwctype/thwctype.c:
	Add editor modeline.

2010-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thinp/thinp.c,
	* src/thrend/thrend.c,
	* src/thcoll/thcoll.c,
	* src/thcoll/cweight.c,
	* src/thwstr/thwstr.c,
	* src/thwchar/thwchar.c,
	* src/thwbrk/thwbrk.c,
	* src/thstr/thstr.c,
	* src/thcell/thcell.c:
	Reformat source. Add editor modeline.

2010-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* tests/thsort.c: Yet another GPL header leftover removal.
	Update my e-mail address.

2010-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Replace <thai/tis.h> with a rewritten one, so we can enforce the
	license.

	* include/thai/tis.h: