@@ -1,3 +1,11 @@
+2010-03-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* configure.in: Post-release version suffix added.
+
+	Turn off manpages generation
+	* doc/Doxyfile.in: Turn GENERATE_MAN off.
+	* doc/Makefile.am: Remove man targets.
+
 2010-02-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* configure.in: Bump library revision.
